Svetainė kuriama centruota

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 
   </head>
   <body>
-    <div style="position: absolute; top: 30%; height: 300px; width: 100%">
-      <div style="text-align: left; margin: 0 auto; width: 600px;">
+    <div style="position: absolute; top: 30%; height: 300px;text-align: center">
         <p>Šiuo metu svetainė kuriama.</p>
 
         <p>Jei turite klausimų, skambinkite mums tel. 8 672 29030.</p>
-      </div>
   </div>
   </body>
 </html>
