--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   </head>
   <body>
-    <div style="position: absolute; top: 30%; height: 300px;text-align: center">
-        <p>Šiuo metu svetainė kuriama.</p>
+    <div style="position: absolute; top: 30%; height: 300px; text-align: center; width: 100%">
+        <p>Atsiprašome, šiuo metu svetainė kuriama.</p>
 
         <p>Jei turite klausimų, skambinkite mums tel. 8 672 29030.</p>
   </div>
